# mefali

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  analysis_options.yaml  deploy-mefali.sh  docker-compose.prod.yml  docker-compose.yml  exemple.md  note.md  openapi.json  pubspec.yaml  rust-toolchain.toml
backend/: Cargo.toml  Dockerfile  sqlx.toml
backend/.sqlx/: query-0087eecb3b9180cb9f873daf8fc17172538d9bdc574ab4aed72f26ca8c778d98.json  query-04d6f01b0a3c0ad261d3265e0f783d72d59038cb12732eb1c3c930a7cd000e9b.json  query-08c4f5fdfb41c731ed720b3388323b91d39b4bab7afe630f84e93b25cacd3b93.json  query-0bc6a8921a32b8237e265a09cf7ddb65561bde886229d9af6046ad823910c76e.json  query-0c96f57c34efec60988436f80236273d7fc8bec3b720e11af526e8c8129b6bc2.json  query-13d6278ba0f093a58848ce3cd1d66fcc6a2c5526cdd3d04275ac86b3456b817e.json  query-1453e7753b62bbdc229a12cbaedaadb2852a5cdc6af37cdd968ad91a9b72683c.json  query-1470f6c758924549b2896285af9af7d6bbfcf3094b7a835a03980e6239c31744.json  query-1705d88ad38ea8ac13ce5a36e86903bed88c3a92947da9cc840d4f4b3e8fc3fa.json  query-18e8bad71676c5eef157592b2d475973f1dd3f866ccf8a1ea31e6e7cdcb5cb80.json  query-1a1036855d8a7a59a32738deec3c49e03fbd989a77a7307152df414b37a29596.json  query-1aec56770ef974e4dc579d6979c50b7bbf6296df614cf9a386ca03a9449aa723.json  query-1b4c75f68ab99bfc36b06fc1d17b88efad2775382a429b82eed5ede89cd4f074.json  query-1cccf2673ddfe329563948baff171cc5d2ad418d690d62235e8a6917c6645376.json  query-1e9457b664a471d8ed6e79cdab79a548a5942a9aadd8f555c5019c4331d03bff.json  query-1f5a9e05522daff2fa9cf632ffb29891d09feb3050f169aab3c7c548072d71d1.json  query-2022c089e053492d3d283439796f345b16a01decbcbcbfe8277186d0220953f0.json  query-21772a06c1b5efb50c1003e74912c5fdc7fe4206a8e56d470ba77818b063b3d4.json  query-24a0313759b5fbfc273ad37b463d6d6b48248f12d4a6bc90990717830223303a.json  query-24b8006570025438b524ee8b47847babb08f52d9101cb0bf35e15e0c5c5ea1ee.json  query-271a5fe177b746882a49238ce86909e122ae46a73517b1d844e6e0bf1a91ebbb.json  query-2d9f69f8b20867271ed4bd88051397c99bb7b3adf5a49242c8cb88bf38fdea36.json  query-2df5bc16da36939b9b272fd5cf8734ed60fb588b2cfad59117122eddba2248b5.json  query-2f7ebf06ce21dbca48af6d023371d2962ce0aab9f2192c4aeb80479a934482ef.json  query-3360fea83f1122e7639d54100fc67e558b7a113f7402e168b357cbed4437b584.json  query-35f7ee1df7587a2d2a94de365eb103c2ce6339bb1e8b7272b525100133cdeec8.json  query-38cef5166fb3a0cf85c2666e90cdaa088511203177e0e5a6ada015ce84c37174.json  query-3e7d2ba71e1f084233d7abe5759d362f4d96544526d3d3871a6b69b046d68b32.json  query-4049940db49f75bfde4d74ae8d85af7cf79664f761504e432eca044d5a5569de.json  query-4925ee297d34ffd1a2dc5477c4539a2807f753d4beb0fda1876fa26555a25ec2.json  query-4a740aa9ba252975741d9e08113b070191c1ffc9f934cfcef5b96e6d9a2d08a1.json  query-4b9092c334af289063354934ec4b8a88bf33f657c32ddfa9989756ba10cc9c54.json  query-4cb38f35855771b4076b8160fe8990ad9be21753d481b72cf0acc354c5217066.json  query-4d1dfed98ac37b503f8774931b2186e94ef14817bc43c9d5f4b34085dd6851db.json  query-4e2b9381cff2444fd8ec21c1bb336afa320fb874af43efbceb5158d102bccc96.json  query-51f987bd6396eea0117f994a053550983072dae2e1971b2abacaf020252732a4.json  query-5231f86bb959da7f9c7b821df968f520ea573830c514443b6f2ced5ea08c0830.json  query-52e6072a1bea191ca03133767ae63b83b7f37e0edab5b57878df383b4d387b4a.json  query-57330acf1050567b747ee0d19cab32d2e358508dbeac6056cd7e628355e8acf3.json  query-5796a6e34ac7dab70734eb6cd97cc520acbd6462f8a8bb1241baec4c4fe6ea84.json  (+77 more)
backend/api/: Cargo.toml
backend/api/src/: admin_prestataires_http.rs  adresses_http.rs  auth_http.rs  comptes_http.rs  dev_http.rs  health.rs  infra_redis.rs  infra_s3.rs  lib.rs  main.rs  prestataires_http.rs  signalements_http.rs  vendeur_http.rs  zones_http.rs
backend/api/tests/: infra_redis.rs  infra_s3.rs
backend/crates/avis/: Cargo.toml
backend/crates/commandes/: Cargo.toml
backend/crates/comptes/: Cargo.toml
backend/crates/coursier/: Cargo.toml
backend/crates/dispatch/: Cargo.toml
backend/migrations/: 0001_outbox.sql  0002_zones.sql  0003_comptes.sql  0004_prestataires.sql  README.md
backend/seeds/: 00_demo_marker.sql  10_zones_tiassale.sql  20_comptes.sql  30_prestataires.sql  35_articles.sql  README.md
server/: .env.example  Cargo.toml  Dockerfile
server/migrations/: 20260317000001_create_enums.down.sql  20260317000001_create_enums.up.sql  20260317000002_create_city_config.down.sql  20260317000002_create_city_config.up.sql  20260317000003_create_users.down.sql  20260317000003_create_users.up.sql  20260317000004_create_merchants.down.sql  20260317000004_create_merchants.up.sql  20260317000005_create_products.up.sql  20260317000006_create_wallets.down.sql  20260317000006_create_wallets.up.sql  20260317000007_create_orders.up.sql  20260317000008_create_order_items.up.sql  20260317000009_create_wallet_transactions.up.sql  20260317000010_create_deliveries.down.sql  20260317000010_create_deliveries.up.sql  20260317000011_create_disputes.down.sql  20260317000011_create_disputes.up.sql  20260317000012_create_sponsorships.down.sql  20260317000012_create_sponsorships.up.sql  20260317000013_create_kyc_documents.down.sql  20260317000013_create_kyc_documents.up.sql  20260317000014_create_refresh_tokens.up.sql  20260317000015_add_merchant_onboarding_fields.down.sql  20260317000015_add_merchant_onboarding_fields.up.sql  20260317000016_create_business_hours.down.sql  20260317000016_create_business_hours.up.sql  20260317000017_create_stock_alerts.down.sql  20260317000017_create_stock_alerts.up.sql  20260317000018_create_exceptional_closures.down.sql  20260317000018_create_exceptional_closures.up.sql  20260320000001_add_external_transaction_id.down.sql  20260320000001_add_external_transaction_id.up.sql  20260320000002_add_refused_delivery_status.down.sql  20260320000002_add_refused_delivery_status.up.sql  20260320000003_drop_unique_order_id_deliveries.down.sql  20260320000003_drop_unique_order_id_deliveries.up.sql  20260320000004_add_refusal_reason_to_deliveries.down.sql  20260320000004_add_refusal_reason_to_deliveries.up.sql  20260320000005_add_driver_availability.down.sql  (+15 more)
(+835 files in other folders)
