# Workspace backend Mefali — Actix + sqlx. Versions figées le 2026-07-13
# (research.md R1, constitution X). Le workspace assemble 12 crates de domaine
# (vides ce cycle), le crate technique `socle` et le binaire `api`.
[workspace]
resolver = "2"
members = ["crates/*", "api"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
# --- Crates internes (chemins) ---
socle = { path = "crates/socle" }
zones = { path = "crates/zones" }
comptes = { path = "crates/comptes" }
prestataires = { path = "crates/prestataires" }
qr = { path = "crates/qr" }
tarification = { path = "crates/tarification" }
commandes = { path = "crates/commandes" }
dispatch = { path = "crates/dispatch" }
coursier = { path = "crates/coursier" }
paiements = { path = "crates/paiements" }
notifications = { path = "crates/notifications" }
avis = { path = "crates/avis" }
metriques = { path = "crates/metriques" }

# --- Web / runtime ---
actix-web = "4.14.0"
# Uploads entrants pièce d'identité / note vocale (CPT, research.md R7).
actix-multipart = "0.8.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "time"] }

# --- Base de données ---
sqlx = { version = "0.9.0", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls-ring",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "json",
  "migrate",
  # Lit backend/sqlx.toml (preferred-crates = chrono) — sinon les macros et le
  # CLI échouent en présence du fichier (research.md R1).
  "sqlx-toml",
] }

# --- Contrat OpenAPI ---
utoipa = { version = "5.5.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# --- Sérialisation / types ---
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.5", features = ["v7", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }

# --- Observabilité (TRX-03) ---
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
tracing-actix-web = "0.7.22"
sentry = "0.48.4"
sentry-actix = "0.48.4"

# --- Configuration / infra ---
config = "0.15.25"
redis = "1.3.0"
deadpool-redis = "0.23.0"
aws-sdk-s3 = "1.138.0"

# --- Utilitaires ---
async-trait = "0.1"
thiserror = "2"
# Client HTTP de TESTS uniquement (dev-dependency) : consomme une URL présignée
# Garage pour prouver l'aller-retour d'octets (SC-007, cycle CPT T005). Déjà
# dans l'arbre via aws-smithy-http-client — aucune résolution nouvelle.
reqwest = { version = "0.13.4", default-features = false }

# --- Empreinte de configuration (ZON-04, research.md R3) ---
sha2 = "0.11.0"
# --- Fuseau de zone pour l'état effectif de boutique (cycle VND 005, R3/R8) ---
# Les horaires d'ouverture s'interprètent dans le fuseau de la zone
# (`zone.fuseau_horaire`, seed Africa/Abidjan) — jamais dans celui du serveur.
chrono-tz = "0.10"
# --- Rate-limit /config par IP (ZON-04, research.md R4) ---
actix-governor = "0.10.0"

# --- Authentification et OTP (cycle CPT 003) — versions figées le 2026-07-14 ---
# Jeton d'accès JWT HS256 15 min (research.md R1).
# ⚠ jsonwebtoken 10 n'embarque AUCUN backend crypto par défaut (`default =
# ["use_pem"]`) : sans feature, `encode` compile puis PANIQUE à la première
# signature. `rust_crypto` (pur Rust) plutôt que `aws_lc_rs` : le builder de
# `backend/Dockerfile` n'a que build-essential/pkg-config, pas cmake. `use_pem`
# est inutile ici — HS256 signe avec un secret brut, jamais une clé PEM.
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
# Normalisation E.164 (port Rust de libphonenumber — research.md R4).
phonenumber = "0.3.10"
# HMAC-SHA256 du code OTP au repos (research.md R3) — s'appuie sur sha2 ci-dessus.
hmac = "0.13.0"
# CSPRNG : code OTP 6 chiffres, refresh opaque 256 bits, jeton d'inscription (R2/R3).
rand = "0.10.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
