[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/infrastructure",
    "crates/domain",
    "crates/payment_provider",
    "crates/notification",
    "crates/api",
]

[workspace.dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# S3-compatible storage (MinIO)
aws-sdk-s3 = "1"
aws-config = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"

# JWT
jsonwebtoken = "9"

# Random / OTP
rand = "0.8"

# Internal crates
common = { path = "crates/common" }
infrastructure = { path = "crates/infrastructure" }
domain = { path = "crates/domain" }
payment_provider = { path = "crates/payment_provider" }
notification = { path = "crates/notification" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
strip = true
