[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "export-openapi"
path = "src/bin/export-openapi.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
actix-web.workspace = true
tokio.workspace = true
socle.workspace = true
zones.workspace = true
sqlx.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-swagger-ui.workspace = true
# Rate-limit par IP de GET /config (research.md R4). Consommé par zones_http (T015).
actix-governor.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
sentry-actix.workspace = true
