[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "export-openapi"
path = "src/bin/export-openapi.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
actix-web.workspace = true
# Uploads entrants (pièce d'identité, note vocale — research.md R7). Consommé
# par comptes_http (T018, T021).
actix-multipart.workspace = true
tokio.workspace = true
socle.workspace = true
zones.workspace = true
comptes.workspace = true
prestataires.workspace = true
sqlx.workspace = true
# Impls RÉELLES des ports du crate `comptes` : la composition racine connaît
# l'infra, le domaine ne connaît que ses traits (constitution II). Consommées par
# infra_redis (DepotEphemere) et infra_s3 (DepotObjets) — T005.
redis.workspace = true
deadpool-redis.workspace = true
aws-sdk-s3.workspace = true
utoipa.workspace = true
utoipa-actix-web.workspace = true
utoipa-swagger-ui.workspace = true
# Rate-limit par IP de GET /config (research.md R4). Consommé par zones_http (T015).
actix-governor.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
# Impls des ports async du crate `comptes` (infra_redis, infra_s3 — T005).
async-trait.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
sentry-actix.workspace = true

[dev-dependencies]
# Tests d'intégration des impls réelles des ports (infra_redis, infra_s3 — T005).
tokio.workspace = true
comptes.workspace = true
prestataires.workspace = true
uuid.workspace = true
chrono.workspace = true
# Consomme une URL présignée Garage pour prouver l'aller-retour d'octets (SC-007).
reqwest.workspace = true
