[package]
name = "socle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
config.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
utoipa.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sentry.workspace = true

[dev-dependencies]
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
