[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
domain.workspace = true
infrastructure.workspace = true
payment_provider.workspace = true
notification.workspace = true
actix-web.workspace = true
actix-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

[dev-dependencies]
actix-web = { workspace = true, features = ["macros"] }
