[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
infrastructure.workspace = true
notification.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
redis.workspace = true
sqlx.workspace = true
aws-sdk-s3.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
sha2.workspace = true
