[package]
name = "payment_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
